k3s-manifests/forensic-sandbox/sandbox-app.yaml
# 1. 앰비언트 메시 라벨이 적용된 네임스페이스
apiVersion: v1
kind: Namespace
metadata:
  name: forensic-sandbox
  labels:
    istio.io/dataplane-mode: ambient
    istio.io/use-waypoint: sandbox-waypoint
  annotations:
    argocd.argoproj.io/sync-wave: "-1"

---
# 3. 샌드박스 앱 디플로이먼트
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forensic-sandbox-app
  namespace: forensic-sandbox
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 0 
  selector:
    matchLabels:
      app: forensic-sandbox-app
  template:
    metadata:
      labels:
        app: forensic-sandbox-app
    spec:
      serviceAccountName: sandbox-app-sa 
      
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000

      containers:
      - name: consumer-app
        image: alpine:latest # 가벼운 리눅스 이미지 -> 추후 수정 
        command: ["/bin/sh", "-c", "sleep infinity"] 
        
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
            
        # 리소스 제한 (노드 다운 방지)
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
            
---
apiVersion: v1
kind: Service
metadata:
  name: aws-rds-host
  namespace: forensic-sandbox
spec:
  type: ExternalName
  externalName: aiops-postgres-db.cz4qe6c6ibrd.ap-northeast-2.rds.amazonaws.com
